module(
    name = "azure-apim-plugin",
    version = "0.0.1",
)

# --- Bazel and Go Tooling ---
bazel_dep(name = "bazel_skylib", version = "1.4.2") # CORRECTED VERSION
bazel_dep(name = "io_bazel_rules_go", version = "0.47.1")
bazel_dep(name = "bazel_gazelle", version = "0.36.0")

# --- Go SDK Setup ---
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.1")

# --- Go Dependency Setup (via Gazelle) ---
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "com_google_cloud_go_spanner",
    "org_golang_google_api",
    "org_golang_google_grpc",
)